syntax = "proto3";

package fairyring.pep;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fairyring/pep/params.proto";
import "fairyring/pep/encrypted_tx.proto";
import "fairyring/pep/pep_nonce.proto";
import "fairyring/pep/aggregated_key_share.proto";
import "fairyring/pep/pub_key.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/Fairblock/fairyring/x/pep/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fairyring/pep/params";
  
  }
  
  // Queries a EncryptedTx by index.
  rpc EncryptedTx (QueryGetEncryptedTxRequest) returns (QueryGetEncryptedTxResponse) {
    option (google.api.http).get = "/fairyring/pep/encrypted_tx/{targetHeight}/{index}";
  
  }
  
  // Queries a list of EncryptedTx items.
  rpc EncryptedTxAll (QueryAllEncryptedTxRequest) returns (QueryAllEncryptedTxResponse) {
    option (google.api.http).get = "/fairyring/pep/encrypted_tx";
  
  }
  
  // Queries a list of EncryptedTx items.
  rpc EncryptedTxAllFromHeight (QueryAllEncryptedTxFromHeightRequest) returns (QueryAllEncryptedTxFromHeightResponse) {
    option (google.api.http).get = "/fairyring/pep/encrypted_tx/{targetHeight}";
  
  }
  
  // Queries a list of LatestHeight items.
  rpc LatestHeight (QueryLatestHeightRequest) returns (QueryLatestHeightResponse) {
    option (google.api.http).get = "/fairyring/pep/latest_height";
  
  }
  
  // Queries a PepNonce by index.
  rpc PepNonce (QueryGetPepNonceRequest) returns (QueryGetPepNonceResponse) {
    option (google.api.http).get = "/fairyring/pep/pep_nonce/{address}";
  
  }
  
  // Queries a list of PepNonce items.
  rpc PepNonceAll (QueryAllPepNonceRequest) returns (QueryAllPepNonceResponse) {
    option (google.api.http).get = "/fairyring/pep/pep_nonce";
  
  }

  // Queries the public keys
  rpc PubKey    (QueryPubKeyRequest) returns (QueryPubKeyResponse) {
    option (google.api.http).get = "/fairyring/pep/pub_key";
  
  }

  // this line is used by starport scaffolding # 2
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetEncryptedTxRequest {
  uint64 targetHeight = 1;
  uint64 index        = 2;
}

message QueryGetEncryptedTxResponse {
  EncryptedTx encryptedTx = 1 [(gogoproto.nullable) = false];
}

message QueryAllEncryptedTxRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEncryptedTxResponse {
  repeated EncryptedTxArray                       encryptedTxArray = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination       = 2;
}

message QueryAllEncryptedTxFromHeightRequest {
  uint64 targetHeight = 1;
}

message QueryAllEncryptedTxFromHeightResponse {
  EncryptedTxArray encryptedTxArray = 1 [(gogoproto.nullable) = false];
}

message QueryLatestHeightRequest {}

message QueryLatestHeightResponse {
  uint64 height = 1;
}

message QueryGetPepNonceRequest {
  string address = 1;
}

message QueryGetPepNonceResponse {
  PepNonce pepNonce = 1 [(gogoproto.nullable) = false];
}

message QueryAllPepNonceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPepNonceResponse {
  repeated PepNonce                         pepNonce = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination     = 2;
}

message QueryPubKeyRequest {}

message QueryPubKeyResponse {
  ActivePubKey activePubKey   = 1 [(gogoproto.nullable) = false];
  QueuedPubKey queuedPubKey = 2 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3